Fixed overflow in modals
Overflow property in modals are now set to auto.

--- a/css/modals.css
+++ b/css/modals.css
@@ -20,4 +20,5 @@ div.modal {
   z-index: 65536;
   display: none;
   text-align: center;
+  overflow: auto;
 }
